[tool.poetry]
name = "jolted-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jolted_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
joltedmod = "^0.1.0"
uvicorn = "^0.22.0"
beanie = "^1.19.2"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev-server = "uvicorn jolted_api.api:app --reload"
prod-server = "uvicorn jolted_api.api:app"
server = 'uvicorn:jolted_api.api:app --reload'
