[tool.poetry]
name = "jolted-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jolted_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
joltedmod = "^0.1.0"
uvicorn = "^0.22.0"
beanie = "^1.19.2"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev-server = "uvicorn jolted_api.api:app --reload"
prod-server = "uvicorn jolted_api.api:app"
server = 'uvicorn:jolted_api.api:app --reload'

[tool.ruff]
target-version = "py311"
required-version = "0.0.270"
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "C90",
  "I",
  "N",
  "ANN",
  "ASYNC",
  "C4",
  "Q",
  "RET",
  "SIM",
  "PTH",
  "PLR",
  "RUF",
  "TCH"
]
ignore = ["E501", "BUFNR55"]

[tool.ruff.pydocstyle]
convention = "google"
